--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,11 @@ h6 {
 
 .header {
   background: rgba(0, 0, 0, 0.15);
-  z-index: 2;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .header__container {
@@ -136,6 +140,12 @@ h6 {
 }
 
 .header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.menu__body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,7 +196,7 @@ h6 {
 }
 
 .link_active {
-  border-bottom: 2px solid #D4A373;
+  border-bottom: 2px solid #d4a373;
 }
 
 .title {
@@ -209,7 +219,7 @@ h6 {
   line-height: 120%;
 }
 
-._active {
+.category_active {
   color: #d4a373 !important;
 }
 
@@ -232,7 +242,7 @@ a:hover {
 }
 
 .footer__colums {
-  height: 400px;
+  min-height: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -324,23 +334,18 @@ a:hover {
   line-height: 128.5714285714%;
 }
 
-.slider__container {
-  margin: -80px 0px 0px 0px;
-}
-
 .slider__slide {
   position: relative;
 }
 
 .slide__image {
-  width: 100%;
+  min-width: 100%;
 }
 
 .slide__body {
   position: absolute;
-  max-width: 530px;
   bottom: 140px;
-  left: 70px;
+  margin: 0px 70px 0px 70px;
   z-index: 2;
   color: #fff;
 }
@@ -393,6 +398,8 @@ a:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   color: #495057;
 }
 
@@ -400,6 +407,8 @@ a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .blog__categoty-name {
@@ -431,10 +440,11 @@ a:hover {
 }
 
 .blog__item {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 310px;
-          flex: 0 0 310px;
-  margin: 30px 0px 20px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 310px;
+  margin: 30px 0 20px 0;
 }
 
 .item__image-container {
@@ -442,7 +452,11 @@ a:hover {
 }
 
 .item__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   border-radius: 5px;
+  max-width: 100%;
 }
 
 .item__category {
@@ -454,17 +468,29 @@ a:hover {
 
 .item__date {
   margin: 15px 0px 0px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   color: #6c757d;
+  max-width: 310px;
 }
 
 .item__title {
   margin: 15px 0px 0px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   color: #495057;
+  max-width: 310px;
 }
 
 .item__text {
   margin: 15px 0px 0px 0px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   color: #6c757d;
+  max-width: 310px;
 }
 
 .banner__container {
@@ -473,7 +499,7 @@ a:hover {
 
 .banner__image {
   z-index: 0;
-  width: 100%;
+  min-width: 100%;
 }
 
 .banner__content {
@@ -490,14 +516,20 @@ a:hover {
 }
 
 .banner__title {
-  width: 510px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 510px;
   margin: 24px auto 0px auto;
   font-size: 36px;
   line-height: 127.7777777778%;
 }
 
 .banner__text {
-  width: 440px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 440px;
   margin: 13px auto 0px auto;
 }
 
@@ -518,7 +550,7 @@ a:hover {
 }
 
 .favorit__items {
-  margin: 70px 0px 150px 0px;
+  margin: 70px 0px 140px 0px;
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -532,7 +564,16 @@ a:hover {
 
 .favorit__item {
   position: relative;
-  width: 420px;
+  max-width: 420px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0px 0px 10px 0px;
+}
+
+.favorit__image {
+  border-radius: 5px;
+  max-width: 100%;
 }
 
 .favorit__category {
@@ -554,20 +595,36 @@ a:hover {
 }
 
 .favorit__item-title {
-  width: 270px;
-  margin: 15px 0px 0px 0px;
+  max-width: 270px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 15px 0px 0px 0px;
   font-size: 18px;
   line-height: 138.8888888889%;
 }
 
 .favorit__text {
-  width: 340px;
-  margin: 15px 0px 0px 0px;
+  max-width: 340px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 15px 0px 0px 0px;
   color: #E5E5E5;
 }
 
 body {
   font-family: "Lora", serif;
+}
+
+body._lock {
+  overflow: hidden;
+}
+
+@media (min-width: 767.98px) {
+  .slide__body {
+    width: 530px;
+  }
 }
 
 @media (max-width: 1312px) {
@@ -580,6 +637,32 @@ body {
   ._container {
     max-width: 750px;
   }
+
+  .footer__contact {
+    padding: 20px;
+  }
+
+  .footer__explorate {
+    padding: 20px;
+  }
+
+  .footer__headquarter {
+    padding: 20px;
+  }
+
+  .footer__connections {
+    padding: 20px;
+  }
+
+  .blog__items {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+
+  .favorit__items {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -587,8 +670,180 @@ body {
     max-width: none;
     padding: 0 10px;
   }
+
+  .menu__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+
+  .menu__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .menu__link {
+    font-size: 18px;
+    text-align: center;
+    margin: 0px 0px 50px 0px;
+  }
+
+  .menu__search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0px 0px 0px 0px;
+  }
+
+  .menu__icon {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+  }
+
+  .menu__icon span,
+  .menu__icon::before,
+  .menu__icon::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    background-color: #fff;
+  }
+
+  .menu__icon::before,
+  .menu__icon::after {
+    content: "";
+  }
+
+  .menu__icon::before {
+    top: 0;
+  }
+
+  .menu__icon::after {
+    bottom: 0;
+  }
+
+  .menu__icon span {
+    top: 50%;
+    -webkit-transform: scale(1) translate(0px, -50%);
+        -ms-transform: scale(1) translate(0px, -50%);
+            transform: scale(1) translate(0px, -50%);
+  }
+
+  .menu__icon._active span {
+    -webkit-transform: scale(0) translate(0px, -50%);
+        -ms-transform: scale(0) translate(0px, -50%);
+            transform: scale(0) translate(0px, -50%);
+  }
+
+  .menu__icon._active::before {
+    top: 50%;
+    -webkit-transform: rotate(-45deg) translate(0px, -50%);
+        -ms-transform: rotate(-45deg) translate(0px, -50%);
+            transform: rotate(-45deg) translate(0px, -50%);
+  }
+
+  .menu__icon._active::after {
+    bottom: 50%;
+    -webkit-transform: rotate(45deg) translate(0px, 50%);
+        -ms-transform: rotate(45deg) translate(0px, 50%);
+            transform: rotate(45deg) translate(0px, 50%);
+  }
+
+  .menu__body {
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    padding: 100px 30px 30px 30px;
+    -webkit-transition: left 0.5s ease 0s;
+    -o-transition: left 0.5s ease 0s;
+    transition: left 0.5s ease 0s;
+  }
+
+  .menu__body._active {
+    left: 0;
+  }
+
+  .title {
+    font-size: 26px;
+  }
+
+  .text {
+    font-size: 16px;
+  }
+
+  .footer__colums {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+
+  .sub-footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+
+  .slide__body {
+    margin: 0;
+  }
+
+  .slide__discription {
+    display: block;
+  }
+
+  .blog__title {
+    margin: 50px 0px 0px 0px;
+  }
+
+  .blog__categoty-name {
+    font-size: 18px;
+    line-height: 291.6666666667%;
+    margin: 0px 30px 0px 0px;
+  }
+
+  .blog__view-all {
+    display: none;
+  }
+
+  .favorit__text {
+    display: none;
+  }
 }
 @supports (-webkit-appearance:none){
+
+}
+
+ @media (min-width: 767.98px){
+
+@supports (-webkit-appearance:none){
+
+}
 
 }
 
